# monoid

./: .editorconfig  .env  .gitignore  Pipfile  README.md  _CoqProject  dune-project  occam.opam
.github/workflows/: ocaml-build.yml  python-buid.yml
dart/: dub.json
dart/example/: .gitignore  dub.json
dart/example/source/: lib.d
dart/hello/: dub.json
dart/hello/source/: app.d
meta/llvm/: README.md  build.ninja  example.c  setup.sh  test.ll
meta/migration/play/: 01__initialize.sql
meta/video-pipeline/: .gitignore  README.md
notebooks/core/: .gitignore  asyncio_client.py  asyncio_queue.py  asyncio_server.py  get_http_headers.py  pattern_matching.py  play_asyncio.py  play_wikipedia.ipynb  rx.ipynb  thespian-actors.ipynb
notebooks/dask/: 01_dask_delayed.ipynb  01x_lazy.ipynb  02_bag.ipynb  03_arrays.ipynb  05_distributed.ipynb  accounts.py  prep.py
notebooks/data_and_streaming/: bokeh-visualization.ipynb  pandas-gcoty.ipynb  pyarrow-getting-started.ipynb  pyspark-mongodb.ipynb  pyspark-pg.ipynb  pyspark-tutorial.ipynb  pyspark_cassandra.ipynb  pyspark_cassandra.sql  pyspark_qs_dataframe.ipynb  rethinkdb.ipynb  sklearn-getting-started.ipynb  sklearn-linear-models.ipynb  sqlaclchemy-gs.ipynb
notebooks/mldl/: .gitignore  Tensorboard.ipynb  annml-apress.ipynb  binary-classification.ipynb  dlfs_ch1.py  dlfs_ch3.py  image-classification.ipynb  linear_unit.py  markdown_processing.ipynb  perceptron.py  play_jieba.ipynb
occam/: .gitignore  README.md  effekt.ml
occam/boot/: dune  hello.ml
occam/docs/: guides.mld  index.mld
occam/lang/infer/: context.ml  (+13 more)
occam/lib/naive_rpc/example/: dune  echo_http.ml  echo_inproc.ml  echo_service.inf  echo_service_impl.ml  echo_zmq.ml
occam/program/: dune  effekt.ml  o99p.ml
(+56 files in other folders)
