opam-version: "2.0"
name: "occam"
version: "0.1"
synopsis: "Monorepo for OCAML"
maintainer: "Lessmore studio <studio@typecons.com>"
depends: [
    "lwt"
    "lwt_ppx"
    "ppx_inline_test" {build}
    "ppx_deriving"
    "coq"
    "ppxlib"
    "utop"
    "yojson"
    "ppx_deriving_yojson"
    "lsp"
    "zmq"
    "zmq-lwt"
    "utop"
    "ocamlformat" {build}
]
build: [
    "dune" "build" "-p" name "-j" jobs
]
