opam-version: "2.0"
name: "occam"
version: "0.1"
synopsis: "Monorepo for OCAML"
maintainer: "Lessmore studio <studio@typecons.com>"
depends: [
    "lwt"
    "lwt_ppx"
    "ppx_inline_test" {build}
    "ppx_deriving"
    "ppxlib"
    "yojson"
    "ppx_deriving_yojson"
    "lsp"
    "domainslib"
    "zmq"
    "zmq-lwt"
    "utop"
    "alcotest-async"
    "mirage-clock"
    "duration"
    "luv"
    "cohttp-async"
    "cohttp-lwt-unix"
    "ocamlformat" {build}
    "ocaml-lsp-server" {build}
    "dune" {build}
]
build: [
    "dune" "build" "-p" name "-j" jobs
]
