(executable
 (name echo_zmq)
 (modules echo_zmq)
 (libraries echo_service echo_service_impl naive_zmq))

(executable
 (name echo_http)
 (modules echo_http)
 (libraries echo_service echo_service_impl naive_http))

(library
 (name echo_service)
 (modules echo_service)
 (libraries naive_rpc yojson)
 (preprocess
  (pps ppx_deriving_yojson)))

(library
 (name echo_service_impl)
 (modules echo_service_impl)
 (libraries echo_service))

(rule
 (target echo_service.ml)
 (deps
  (:infer_gen %{lib-private:infer:bin/infer_gen.exe})
  (:intf echo_service.inf))
 (action
  (run %{infer_gen} %{intf} -o %{target})))
